# calculator-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: calculator.rs  lib.rs  number.rs  parser.rs  shunting_yard.rs
src/ast/: constant.rs  error.rs  eval.rs  function.rs  mod.rs  operator.rs  parse.rs  token.rs  tokenize.rs
src/number/: arithmetic.rs  bitwise.rs  comparison.rs  conversion.rs  error.rs  format.rs  macros.rs  mod.rs  nibble.rs  numeric.rs
src/number/conversion/: from.rs  mod.rs  to.rs
src/number/fmt/: impls.rs  spec.rs
src/value/: README.md  arithmetic.rs  comparison.rs  conversion.rs  dispatch_operation.rs  error.rs  mod.rs  numeric.rs
varienum/: Cargo.toml
varienum/src/: lib.rs
