[package]
name = "calcinum"
version = "0.1.3"
edition = "2024"
authors = ["Matt Oestreich"]
description = "Calculator capable of handling arbitrarily large numbers"
license = "GPL-3.0-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/matthewoestreich/calculator-rs"
homepage = "https://github.com/matthewoestreich/calculator-rs#README.md"
keywords = ["calculator", "math", "mathematics", "bigint", "bigdecimal"]
categories = [
  "mathematics",
] # See available categories here: https://crates.io/category_slugs

[dependencies]
bigdecimal = "0.4.10"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.12.3"

[dev-dependencies]
rstest = "0.26.1"
