[package]
name = "calcinum"
version = "0.2.1"
edition = "2024"
authors = ["Matt Oestreich"]
description = "Calculator capable of handling arbitrarily large numbers"
license = "GPL-3.0-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/matthewoestreich/calcinum"
homepage = "https://github.com/matthewoestreich/calcinum#README.md"
keywords = ["calculator", "math", "mathematics", "bigint", "bigdecimal"]
categories = [
  "mathematics",
] # See available categories here: https://crates.io/category_slugs

[lib]
name = "calcinum"
path = "src/lib.rs"

[[bin]]
name = "calcinum"
path = "bin/main.rs"

[dependencies]
astro-float = "0.9.5"
bigdecimal = "0.4.10"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.12.3"
rustyline = "18.0.0"

[dev-dependencies]
rstest = "0.26.1"
